Modification du lien Linkedin, ajout du lien de téléchargement du CV, modification des modales de la section Expérience

--- a/index.html
+++ b/index.html
@@ -82,14 +82,16 @@
             <!--Contenu textuel de la section Accueil-->
             <h3>Bonjour et bienvenue sur mon portfolio !</h3>
             <h1>Je suis Océane Hébrard,<br><span>Conceptrice Développeuse d'Applications</span></h1>
-            <button type="button" id="accueil-bouton-telecharger-cv">
+            
+            <!--Bouton de téléchargement CV-->
+            <a href="./cv-oceane-hebrard.pdf" target="_blank" id="accueil-bouton-telecharger-cv">
                 <span>Télécharger mon CV</span>
                 <img src="img/telecharger-cv.svg" alt="Pictogramme de téléchargement">
-            </button>
+            </a>
 
             <!--Logo Linkedin et GitHub-->
             <div class="picto-reseau-sociaux">
-                <a href="www.linkedin.com/in/oceane-hebrard" target="_blank"><img src="img/picto-linkedin.svg" alt="Logo noir et blanc Linkedin"></a>
+                <a href="https://linkedin.com/in/oceane-hebrard" target="_blank"><img src="img/picto-linkedin.svg" alt="Logo noir et blanc Linkedin"></a>
                 <a href="https://github.com/oceaneheb" target="_blank"><img src="img/picto-git-hub.svg" alt="Logo noir et blanc GitHub"></a>
             </div>
 
@@ -461,6 +463,7 @@
                                 <img src="./img/logo-edf.png" alt="Logo EDF couleur">
                                 <svg id="picto-close-edf" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#342039}</style><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
                             </div>
+                            <span>Sept. 2020 à Sept. 2022</span>
                             <h3>Chargée de communication (alternance)</h3>
                             <div>
                                 <svg id="picto-localisation-exp" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#342039}</style><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
@@ -496,6 +499,7 @@
                                 <img src="./img/logo-mountnpass.png" alt="Logo mountnpass couleur">
                                 <svg id="picto-close-mountnpass" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#342039}</style><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
                             </div>
+                            <span>Sept. 2019 à Juin. 2020</span>
                             <h3>Assistante Web Marketing (alternance)</h3>
                             <div>
                                 <svg id="picto-localisation-exp" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#342039}</style><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
@@ -579,7 +583,7 @@
             </div>
         </div>
         <div id="footer-picto-reseaux-sociaux">
-            <a href="www.linkedin.com/in/oceane-hebrard" target="_blank"><img src="img/logo-linkedin.png" alt="Pictogramme noir et blanc Linkedin"></a>
+            <a href="https://linkedin.com/in/oceane-hebrard" target="_blank"><img src="img/logo-linkedin.png" alt="Pictogramme noir et blanc Linkedin"></a>
             <a href="https://github.com/oceaneheb" target="_blank"><img src="img/logo-github.png" alt="Pictogramme noir et blanc Git Hub"></a>
         </div>
     </footer>
