Modification du style et du contenu de la section Formation

--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
         <div id="cercle-shadow-purple-accueil"></div>
         <div id="cercle-shadow-pink-accueil"></div>
 
-        <div id="cercle-shadow-purple-experience"></div>
-        <div id="cercle-shadow-pink-experience"></div>
-
         <!-- Section 1 : Accueil -->
         <section id="accueil">
 
@@ -352,85 +349,111 @@
                 
         </section>
 
-        <!-- Section 4 : Formation et Diplômes -->
-        <section class="formation-experience" id="formation">
-            <!--Cercle shadow-->
-            <!-- <div id="cercle-shadow-purple-experience"></div>
-            <div id="cercle-shadow-pink-experience"></div> -->
+        <div id="cercle-shadow-purple-formation"></div>
+        <div id="cercle-shadow-pink-formation"></div>
+        <!--Section 4 : Formation et Diplômes -->
+        <section class="formation" id="formation">
             <h2>Formation & Diplômes</h2>
-            <div>
-                <div class="liste-formation-experience">
-                    
-                    <!-- Première formation-->
-                        <div class="container">
-                            <div>
-                                <div>
-                                    <span>Sept. 2023 à Juin 2024</span>
-                                    <h3>Bac +3 - Concepteur Développeur d'Applications</h3>
-                                </div>
-                                <div>
-                                    <img src="img/logo-pole-numerique.png" alt="Logo Pôle NUmérique de l'Adrar de Toulouse ">
-                                    <a href="http://www.adrar-polenum.fr/team/FICHES/FICHE_CDA_ADRAR_POLE_NUMERIQUE_2023.pdf" target="_blank">En savoir +</a>
-                                </div>    
-                            </div>
-                        </div>
+            <div class="liste-formation">
 
-                        <!-- Deuxième formation-->
-                        <div class="container">
-                            <div>
-                                <div>
-                                    <span>Juil. 2023 à Sept. 2023</span>
-                                    <h3>Compétences Plus - Formation HTML, CSS, JS et Bootstrap</h3>
-                                </div>
-                                <div>
-                                    <img src="img/logo-pole-numerique.png" alt="Logo Pôle NUmérique de l'Adrar de Toulouse ">
-                                    <!-- <a href="#">En savoir +</a> -->
-                                </div>    
-                            </div>
-                        </div>
+                <!--1ère formation : CDA-->
+                <div class="formation-left">
+                    <!--Cercle, ligne, cercle-->
+                    <svg id="forme-courbe" xmlns="http://www.w3.org/2000/svg" width="202" height="68" viewBox="0 0 202 68" fill="none">
+                        <circle cx="7" cy="7" r="7" fill="#FF2D87"/>
+                        <circle cx="195" cy="61" r="7" fill="#FF2D87"/>
+                        <path d="M7.5 9.5C11.4543 44.1924 69 52.5 100.5 40C132 27.5 163.184 0.130844 187 26C198.845 38.8656 197.5 62 197.5 62" stroke="#FF2D87"/>
+                    </svg>
 
-                        <!-- Troisième formation-->
-                        <div class="container">
-                            <div>
-                                <div>
-                                    <span>Janv. 2023 à Mars 2023</span>
-                                    <h3>Apple Foundation Program - Formation à Swift & Swift UI</h3>
-                                </div>
-                                <div>
-                                    <img src="img/logo-simplon.png" alt="Logo Pôle NUmérique de l'Adrar de Toulouse ">
-                                    <a href="https://simplon.co/formation/foundation/24" target="_blank">En savoir +</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Quatrième formation-->
-                        <div class="container">
-                            <div>
-                                <div>
-                                    <span>Sept. 2020 à Sept. 2022</span>
-                                    <h3>Bac +5 - Master Communication Digitale et Marketing d'Influence</h3>
-                                </div>
-                                <div>
-                                    <img src="img/logo-esg-toulouse.png" alt="Logo Pôle NUmérique de l'Adrar de Toulouse ">
-                                    <a href="https://www.esg.fr/ecole-toulouse/mastere/communication" target="_blank">En savoir +</a>
-                                </div>    
-                            </div>
-                        </div>
-
-                        <!-- Cinquième formation-->
-                        <div class="container">
-                            <div>
-                                <div>
-                                    <span>Sept. 2019 à Sept. 2020</span>
-                                    <h3>Bac +3 - Bachelor Communication</h3>
-                                </div>
-                                <div>
-                                    <img src="img/logo-esg-toulouse.png" alt="Logo Pôle NUmérique de l'Adrar de Toulouse ">
-                                    <a href="https://www.esg.fr/ecole-toulouse/bachelor/communication" target="_blank">En savoir +</a>
-                                </div>    
-                            </div>
-                        </div>
+                    <div>
+                        <span>1</span>
+                    </div>
+                    <span>Sept. 2023 à Juin 2024</span>
+                    <h3>Bac +3 - Concepteur Développeur d'Applications</h3>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#fd695d" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                        <p>Pôle Numérique de l'Adrar</p>
+                    </div>
+                    <a href="http://www.adrar-polenum.fr/team/FICHES/FICHE_CDA_ADRAR_POLE_NUMERIQUE_2023.pdf" target="blank" class="btn-en-savoir-plus-formation">En savoir +</a>
                 </div>
+
+                <!--2ème formation : Compétences +-->
+                <div class="formation-left formation-right">
+                    <!--Cercle, ligne, cercle-->
+                    <svg id="forme-courbe-right" xmlns="http://www.w3.org/2000/svg" width="208" height="75" viewBox="0 0 208 75" fill="none">
+                        <circle cx="7" cy="7" r="7" transform="matrix(-1 0 0 1 208 0)" fill="#FF2D87"/>
+                        <circle cx="7" cy="7" r="7" transform="matrix(-1 0 0 1 14 61)" fill="#FF2D87"/>
+                        <path d="M201 6.5C197.046 41.1924 156 58.5 124.5 46C93 33.5 45.8163 1.13084 22 27C10.1554 39.8656 7 60.5 7 60.5" stroke="#FF2D87"/>
+                    </svg>
+
+                    <div>
+                        <span>2</span>
+                    </div>
+                    <span>Juil. 2023 à Aout 2023</span>
+                    <h3>Compétences Plus - Formation HTML, CSS, Javascript et Bootstrap</h3>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#fd695d" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                        <p>Pôle Numérique de l'Adrar</p>
+                    </div>
+                    <a target="blank" class="btn-en-savoir-plus-formation">En savoir +</a>
+                </div>
+
+                <!--3ème formation : AFP-->
+                <div class="formation-left">
+                    <!--Cercle, ligne, cercle-->
+                    <svg id="forme-courbe" xmlns="http://www.w3.org/2000/svg" width="202" height="68" viewBox="0 0 202 68" fill="none">
+                        <circle cx="7" cy="7" r="7" fill="#FF2D87"/>
+                        <circle cx="195" cy="61" r="7" fill="#FF2D87"/>
+                        <path d="M7.5 9.5C11.4543 44.1924 69 52.5 100.5 40C132 27.5 163.184 0.130844 187 26C198.845 38.8656 197.5 62 197.5 62" stroke="#FF2D87"/>
+                    </svg>
+
+                    <div>
+                        <span>3</span>
+                    </div>
+                    <span>Janv. 2023 à Mars 2023</span>
+                    <h3>Apple Foundation Program - Formation à Swift & Swift UI</h3>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#fd695d" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                        <p>Simplon.co, Toulouse</p>
+                    </div>
+                    <a href="https://simplon.co/formation/foundation/24" target="blank" class="btn-en-savoir-plus-formation">En savoir +</a>
+                </div>
+
+                <!--4ème formation : Master Com/Market-->
+                <div class="formation-left formation-right">
+                    <!--Cercle, ligne, cercle-->
+                    <svg id="forme-courbe-right" xmlns="http://www.w3.org/2000/svg" width="208" height="75" viewBox="0 0 208 75" fill="none">
+                        <circle cx="7" cy="7" r="7" transform="matrix(-1 0 0 1 208 0)" fill="#FF2D87"/>
+                        <circle cx="7" cy="7" r="7" transform="matrix(-1 0 0 1 14 61)" fill="#FF2D87"/>
+                        <path d="M201 6.5C197.046 41.1924 156 58.5 124.5 46C93 33.5 45.8163 1.13084 22 27C10.1554 39.8656 7 60.5 7 60.5" stroke="#FF2D87"/>
+                    </svg>
+
+                    <div>
+                        <span>4</span>
+                    </div>
+                    <span>Sept. 2020 à Sept. 2022</span>
+                    <h3>Bac +5 - Mastère Communication Digitale et Marketing d'Influence</h3>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#fd695d" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                        <p>ESG Toulouse</p>
+                    </div>
+                    <a href="https://www.esg.fr/ecole-toulouse/mastere/communication" target="blank" class="btn-en-savoir-plus-formation">En savoir +</a>
+                </div>
+
+                <!--5ème formation : Bachelor Com-->
+                <div class="formation-left derniere-formation">
+                    <div>
+                        <span>5</span>
+                    </div>
+                    <span>Sept. 2019 à Sept. 2020</span>
+                    <h3>Bac +3 - Bachelor Communication</h3>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#fd695d" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                        <p>ESG Toulouse</p>
+                    </div>
+                    <a href="https://www.esg.fr/ecole-toulouse/bachelor/communication" target="blank" class="btn-en-savoir-plus-formation">En savoir +</a>
+                </div>
+
             </div>
         </section>
 
